--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -531,6 +531,7 @@
                         <viewControllerLayoutGuide type="bottom" id="kEO-qE-Y4S"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="P8X-l9-qAa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -563,7 +564,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView autoresizesSubviews="NO" clipsSubviews="YES" contentMode="redraw" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="x9z-NU-QoX">
+                            <tableView autoresizesSubviews="NO" clipsSubviews="YES" contentMode="redraw" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="x9z-NU-QoX">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="scrollIndicatorInsets" minX="22" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -630,9 +631,9 @@
                                 <exclude reference="x9z-NU-QoX"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="G83-TD-VuU"/>
                                 <exclude reference="qSl-Kr-HBq"/>
                                 <exclude reference="wLn-jh-7Y7"/>
-                                <exclude reference="G83-TD-VuU"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -640,9 +641,9 @@
                                 <include reference="x9z-NU-QoX"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="G83-TD-VuU"/>
                                 <include reference="qSl-Kr-HBq"/>
                                 <include reference="wLn-jh-7Y7"/>
-                                <include reference="G83-TD-VuU"/>
                             </mask>
                         </variation>
                     </view>
@@ -836,6 +837,10 @@
                                 <exclude reference="55l-gM-j6T"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="4lP-hN-Gdj"/>
+                                <exclude reference="GlW-yt-ced"/>
+                                <exclude reference="tkD-Gq-qv9"/>
+                                <exclude reference="g4D-Bg-PWW"/>
                                 <exclude reference="DMW-CW-uyX"/>
                                 <exclude reference="E9C-27-PWd"/>
                                 <exclude reference="KhE-D7-bwv"/>
@@ -844,10 +849,6 @@
                                 <exclude reference="LMi-Kj-Spe"/>
                                 <exclude reference="V9t-xm-uD1"/>
                                 <exclude reference="ytZ-8E-bDV"/>
-                                <exclude reference="g4D-Bg-PWW"/>
-                                <exclude reference="4lP-hN-Gdj"/>
-                                <exclude reference="GlW-yt-ced"/>
-                                <exclude reference="tkD-Gq-qv9"/>
                                 <exclude reference="A2F-ud-A5D"/>
                                 <exclude reference="fZe-or-a3E"/>
                             </mask>
@@ -862,6 +863,10 @@
                                 <include reference="55l-gM-j6T"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="4lP-hN-Gdj"/>
+                                <include reference="GlW-yt-ced"/>
+                                <include reference="tkD-Gq-qv9"/>
+                                <include reference="g4D-Bg-PWW"/>
                                 <include reference="DMW-CW-uyX"/>
                                 <include reference="E9C-27-PWd"/>
                                 <include reference="KhE-D7-bwv"/>
@@ -870,10 +875,6 @@
                                 <include reference="LMi-Kj-Spe"/>
                                 <include reference="V9t-xm-uD1"/>
                                 <include reference="ytZ-8E-bDV"/>
-                                <include reference="g4D-Bg-PWW"/>
-                                <include reference="4lP-hN-Gdj"/>
-                                <include reference="GlW-yt-ced"/>
-                                <include reference="tkD-Gq-qv9"/>
                                 <include reference="A2F-ud-A5D"/>
                                 <include reference="fZe-or-a3E"/>
                             </mask>
